--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,212 @@
-.App {
+*{margin: 0;}
+
+#map
+{
+  width: 100%;
+  height: 600px;
+  box-shadow: 0px 3px 5px 3px rgba(0,0,0,0.25);
+}
+
+.mapStatus
+{
+  width: 100%;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+#search
+{
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 10;
+}
+
+#searchBtn
+{
+  font-size: 1.3rem;
+  background-color: #FFF;
+  border: 1px solid black;
+  box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+}
+
+#searchBtn:active
+{
+  background-color: #DDD;
+  transform: translate(1px, 1px);
+}
+
+.record
+{
+  width: 100%;
+  height: 2.1rem;
+  box-sizing: border-box;
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+}
+
+.record:first-child
+{
+  border-top: 3px solid black;
+}
+
+.record:nth-child(odd)
+{
+  background-color: #DDD;
+}
+
+#stats
+{
+  width: 100%;
+  height: 300px;
+  display: flex;
+}
+
+#stats * {text-align: center;}
+
+.statbox
+{
+  width: calc(calc(1/3) * 100%)
+}
+
+.statbox:nth-child(odd)
+{
+  background-color: rgb(204, 204, 204);
+}
+
+.x2
+{
+  width: 100%;
+  word-wrap: break-word;
+  font-size: 2em;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#city, #total, #temperatures
+{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.recordProp
+{
+  width: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.recordId
+{
+  height: 100%;
+  width: 3.5rem;
+  background-color: #EEE;
+  box-sizing: border-box;
+  border-right: 2px solid #AAA;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.details
+{
+  position: fixed;
+  display: none;
+  width: 400px;
+  height: 200px;
+  z-index: 10;
+  background-color: #FFF;
+  top: 10px;
+  left: calc(50% - 200px);
+  pointer-events: none;
+  box-sizing: border-box;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px 2px rgba(0,0,0,0.5);
+}
+
+.details > p.x2 
+{
+  text-decoration: underline 1px;
+  text-shadow: 2px 1px 2px rgba(0,0,0,0.25);
+}
+
+.recordRight
+{
+  z-index: 1;
+  margin-left: auto;
+  height: 100%;
+  display: flex;
+  position: relative;
+}
+
+.recordDate
+{
+  width: 100px;
+  height: 100%;
+  background-color: #EEE;
+  border-left: 2px solid #AAA;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recordDescription
+{
+  z-index: -1;
+  height: 100%;
+  width: 300px;
+  position: absolute;
+  right: 102px;
+  padding-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
+
+nav
+{
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+nav span:hover
+{
+  color: #888;
+  cursor: pointer;
+}
+
+.navButtonLimit
+{
+  pointer-events: none;
+  cursor: default;
+  color: transparent;
+}
+
+.record:nth-child(even):hover
+{
+  background-color: #EEE;
+}
+
+.record:nth-child(odd):hover
+{
+  background-color: #CCC;
+}
+
+.record:hover > .details
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
